--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- CABECERA -->
   <header>
-    <h1>Agustín<span>Fitness</span></h1>
+    <h1>Agustín<span>Fitnesss</span></h1>
     <nav>
       <a href=> <h2 class="typewriter-loop" id="typewriter"></h2></a>
       <a href="#gym">Gym</a>
